--- a/Networking/Base.lproj/Main.storyboard
+++ b/Networking/Base.lproj/Main.storyboard
@@ -19,24 +19,55 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="DgW-kT-Sq1" style="IBUITableViewCellStyleDefault" id="SXJ-BD-KD3">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="100" id="SXJ-BD-KD3" customClass="ElephantCell" customModule="Networking" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SXJ-BD-KD3" id="bfw-Cs-F7I">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DgW-kT-Sq1">
-                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4mS-Nc-zgO">
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="140" id="1o2-SQ-urR"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Elephant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgP-Cj-gxr">
+                                            <rect key="frame" x="148" y="8" width="219" height="25"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="tOG-SM-4vr"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4U-Pe-O6H">
+                                            <rect key="frame" x="148" y="41" width="219" height="50.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50.5" id="Q9U-DN-nby"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="n4U-Pe-O6H" firstAttribute="top" secondItem="VgP-Cj-gxr" secondAttribute="bottom" constant="8" id="1Wf-yv-zuN"/>
+                                        <constraint firstAttribute="trailing" secondItem="VgP-Cj-gxr" secondAttribute="trailing" constant="8" id="91Z-7f-TwN"/>
+                                        <constraint firstItem="n4U-Pe-O6H" firstAttribute="leading" secondItem="4mS-Nc-zgO" secondAttribute="trailing" constant="8" id="Ju9-KP-Hhc"/>
+                                        <constraint firstItem="4mS-Nc-zgO" firstAttribute="top" secondItem="bfw-Cs-F7I" secondAttribute="top" id="LDi-t0-ff8"/>
+                                        <constraint firstAttribute="trailing" secondItem="n4U-Pe-O6H" secondAttribute="trailing" constant="8" id="aQd-RI-6ar"/>
+                                        <constraint firstItem="4mS-Nc-zgO" firstAttribute="leading" secondItem="bfw-Cs-F7I" secondAttribute="leading" id="eAi-TN-1nE"/>
+                                        <constraint firstAttribute="bottom" secondItem="4mS-Nc-zgO" secondAttribute="bottom" constant="-0.5" id="hrm-Ia-ayS"/>
+                                        <constraint firstItem="VgP-Cj-gxr" firstAttribute="top" secondItem="bfw-Cs-F7I" secondAttribute="top" constant="8" id="iHA-Tp-jLi"/>
+                                        <constraint firstItem="VgP-Cj-gxr" firstAttribute="leading" secondItem="4mS-Nc-zgO" secondAttribute="trailing" constant="8" id="y0n-Ln-FXD"/>
+                                        <constraint firstAttribute="bottom" secondItem="n4U-Pe-O6H" secondAttribute="bottom" constant="8" id="zeG-d9-sXm"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="hza-Za-hdH"/>
+                                    <outlet property="elephantDescription" destination="n4U-Pe-O6H" id="P1L-0a-JMM"/>
+                                    <outlet property="elephantImage" destination="4mS-Nc-zgO" id="drq-35-0Ms"/>
+                                    <outlet property="elephantName" destination="VgP-Cj-gxr" id="oZm-xh-yAZ"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -46,10 +77,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Elephants" id="IfT-wO-6ET"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="ToDetail" id="JkT-9g-MdU"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r8N-qw-qSU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="746" y="385"/>
+            <point key="canvasLocation" x="744.79999999999995" y="384.55772113943033"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -59,21 +93,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PXV-dE-H28">
-                                <rect key="frame" x="16" y="82" width="343" height="215"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PXV-dE-H28">
+                                <rect key="frame" x="16" y="80" width="343" height="215"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="PXV-dE-H28" secondAttribute="height" multiplier="343:215" id="ly2-KC-sdK"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5F-Gk-I0m">
-                                <rect key="frame" x="82" y="337" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="N5m-IP-PCH">
+                                <rect key="frame" x="16" y="311" width="343" height="340"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sex:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5F-Gk-I0m">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day of Birthday:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dj9-yv-GrL">
+                                        <rect key="frame" x="0.0" y="28.5" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day of Death:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXs-eR-OyN">
+                                        <rect key="frame" x="0.0" y="57" width="343" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Atf-gE-dy2">
+                                        <rect key="frame" x="0.0" y="85.5" width="343" height="254.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="106" id="eHp-T9-CNA"/>
+                                </constraints>
+                            </stackView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QBt-4A-dOJ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="Gge-X2-1mS"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="N5m-IP-PCH" secondAttribute="trailing" constant="16" id="MXc-wW-oEm"/>
+                            <constraint firstItem="PXV-dE-H28" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="OvA-ee-rNX"/>
+                            <constraint firstItem="N5m-IP-PCH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="XFn-KU-PIh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="N5m-IP-PCH" secondAttribute="bottom" constant="16" id="f3I-JK-Qnb"/>
+                            <constraint firstItem="N5m-IP-PCH" firstAttribute="top" secondItem="PXV-dE-H28" secondAttribute="bottom" constant="16" id="i0v-x6-vD4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PXV-dE-H28" secondAttribute="trailing" constant="16" id="kYo-4x-bYy"/>
+                            <constraint firstItem="PXV-dE-H28" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="mJd-k8-EDg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="descriptionText" destination="Atf-gE-dy2" id="2F3-bB-FLF"/>
+                        <outlet property="dobLabel" destination="Dj9-yv-GrL" id="S0Q-Nu-ymM"/>
+                        <outlet property="dodLabel" destination="RXs-eR-OyN" id="rcZ-nj-9uu"/>
+                        <outlet property="elephantImage" destination="PXV-dE-H28" id="z7k-zX-xeZ"/>
+                        <outlet property="sexLabel" destination="M5F-Gk-I0m" id="aW8-UO-k7q"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
