--- a/Networking/Base.lproj/Main.storyboard
+++ b/Networking/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="0LU-EK-sKF">
             <objects>
                 <tableViewController id="Hl2-er-UWA" customClass="ElephantsTableViewController" customModule="Networking" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="137-Fb-00F">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="137-Fb-00F">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -26,25 +26,26 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4mS-Nc-zgO">
-                                            <rect key="frame" x="0.0" y="0.0" width="140" height="100"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4mS-Nc-zgO" customClass="ImageView" customModule="Networking" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="99.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="140" id="1o2-SQ-urR"/>
+                                                <constraint firstAttribute="width" constant="140" id="8Hy-kb-hEQ"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Elephant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgP-Cj-gxr">
-                                            <rect key="frame" x="148" y="8" width="219" height="25"/>
+                                            <rect key="frame" x="148" y="0.0" width="219" height="17"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="25" id="tOG-SM-4vr"/>
+                                                <constraint firstAttribute="height" constant="17" id="9cO-7f-80z"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4U-Pe-O6H">
-                                            <rect key="frame" x="148" y="41" width="219" height="50.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4U-Pe-O6H">
+                                            <rect key="frame" x="148" y="25" width="219" height="50"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="50.5" id="Q9U-DN-nby"/>
+                                                <constraint firstAttribute="height" constant="50" id="Q9U-DN-nby"/>
+                                                <constraint firstAttribute="height" constant="50" id="tpA-Jw-zz9"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
@@ -52,16 +53,15 @@
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="n4U-Pe-O6H" firstAttribute="top" secondItem="VgP-Cj-gxr" secondAttribute="bottom" constant="8" id="1Wf-yv-zuN"/>
                                         <constraint firstAttribute="trailing" secondItem="VgP-Cj-gxr" secondAttribute="trailing" constant="8" id="91Z-7f-TwN"/>
+                                        <constraint firstItem="n4U-Pe-O6H" firstAttribute="top" secondItem="VgP-Cj-gxr" secondAttribute="bottom" constant="8" id="EOC-ry-pb4"/>
                                         <constraint firstItem="n4U-Pe-O6H" firstAttribute="leading" secondItem="4mS-Nc-zgO" secondAttribute="trailing" constant="8" id="Ju9-KP-Hhc"/>
                                         <constraint firstItem="4mS-Nc-zgO" firstAttribute="top" secondItem="bfw-Cs-F7I" secondAttribute="top" id="LDi-t0-ff8"/>
                                         <constraint firstAttribute="trailing" secondItem="n4U-Pe-O6H" secondAttribute="trailing" constant="8" id="aQd-RI-6ar"/>
                                         <constraint firstItem="4mS-Nc-zgO" firstAttribute="leading" secondItem="bfw-Cs-F7I" secondAttribute="leading" id="eAi-TN-1nE"/>
-                                        <constraint firstAttribute="bottom" secondItem="4mS-Nc-zgO" secondAttribute="bottom" constant="-0.5" id="hrm-Ia-ayS"/>
-                                        <constraint firstItem="VgP-Cj-gxr" firstAttribute="top" secondItem="bfw-Cs-F7I" secondAttribute="top" constant="8" id="iHA-Tp-jLi"/>
+                                        <constraint firstAttribute="bottom" secondItem="4mS-Nc-zgO" secondAttribute="bottom" id="hrm-Ia-ayS"/>
+                                        <constraint firstItem="VgP-Cj-gxr" firstAttribute="top" secondItem="bfw-Cs-F7I" secondAttribute="top" id="iHA-Tp-jLi"/>
                                         <constraint firstItem="VgP-Cj-gxr" firstAttribute="leading" secondItem="4mS-Nc-zgO" secondAttribute="trailing" constant="8" id="y0n-Ln-FXD"/>
-                                        <constraint firstAttribute="bottom" secondItem="n4U-Pe-O6H" secondAttribute="bottom" constant="8" id="zeG-d9-sXm"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -76,7 +76,13 @@
                             <outlet property="delegate" destination="Hl2-er-UWA" id="Lmo-tp-TZI"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Elephants" id="IfT-wO-6ET"/>
+                    <navigationItem key="navigationItem" title="Elephants" id="IfT-wO-6ET">
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="A7q-yQ-el1">
+                            <connections>
+                                <action selector="saveButton:" destination="Hl2-er-UWA" id="AHU-O5-9gc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="ToDetail" id="JkT-9g-MdU"/>
                     </connections>
@@ -85,7 +91,7 @@
             </objects>
             <point key="canvasLocation" x="744.79999999999995" y="384.55772113943033"/>
         </scene>
-        <!--Detail View Controller-->
+        <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="DetailViewController" customModule="Networking" customModuleProvider="target" sceneMemberID="viewController">
@@ -93,7 +99,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PXV-dE-H28">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PXV-dE-H28" customClass="ImageView" customModule="Networking" customModuleProvider="target">
                                 <rect key="frame" x="16" y="80" width="343" height="215"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="PXV-dE-H28" secondAttribute="height" multiplier="343:215" id="ly2-KC-sdK"/>
@@ -132,13 +138,6 @@
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="106" id="eHp-T9-CNA"/>
                                 </constraints>
                             </stackView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QBt-4A-dOJ">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="Gge-X2-1mS"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -152,6 +151,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="HOE-uh-JLj">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="unF-vT-PkG"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="descriptionText" destination="Atf-gE-dy2" id="2F3-bB-FLF"/>
                         <outlet property="dobLabel" destination="Dj9-yv-GrL" id="S0Q-Nu-ymM"/>
